# mono_to_micro

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  notes.md  pyproject.toml
backend/: __init__.py  config.py  main.py
backend/ai/: __init__.py  confidence_scorer.py  llm_client.py  orchestrator.py  rag_retriever.py
backend/ai/chains/: __init__.py  boundary_chain.py  code_chain.py  contract_chain.py  strangler_chain.py
backend/ai/prompts/: boundary_detection.j2  code_extraction.j2  contract_generation.j2  strangler_plan.j2
backend/api/: __init__.py  middleware.py  schemas.py
backend/contracts/: __init__.py  asyncapi_generator.py  grpc_generator.py  openapi_generator.py  validator.py
backend/db/: __init__.py  chroma_client.py  neo4j_client.py
backend/drift/: __init__.py  alerter.py  detector.py  scanner.py
backend/ingestion/: __init__.py  ast_parser.py  dynamic_analyzer.py  embedder.py  graph_builder.py  job_runner.py  language_registry.py
backend/scaffolding/: __init__.py  archiver.py  code_scaffolder.py  infra_generator.py  strangler_planner.py
backend/tests/: __init__.py
docker/: entrypoint.sh
frontend/: app.py
frontend/pages/: 01_upload.py  02_progress.py  03_boundary_review.py  04_contract_review.py  05_download.py  06_drift_dashboard.py
infra/kubernetes/: ingress.yaml  namespace.yaml  neo4j.yaml  ollama.yaml
infra/otel/: collector-config.yaml
scripts/: drift_cron.py  export_graph.py  seed_neo4j.py
test/: run_pipeline_test.py
test/legacy-monolith/: pom.xml
(+142 files in other folders)
