# pyproject.toml
[project]
name = "mono-to-micro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langgraph>=1.2.2",
    "neo4j>=6.2.0",
    "openapi-spec-validator>=0.9.0",
    "opentelemetry-sdk>=1.42.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "streamlit>=1.58.0",
    "streamlit-agraph>=0.0.45",
    "tree-sitter>=0.25.2",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-python>=0.25.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]
